styles/Home.module.css
.container {
 }

.indexContainer {
  width: 100%;
  padding: 1rem 4rem 4rem;
   
}

.navbar {
  background-color: rgb(90, 90, 90);
}

/*fixme no worky */ 
.navItem {
  text-decoration: none;
  color: white;
  font-size: x-large;
}

.headerContainer {
  align-items: center;
  background-color: rgb(135, 23, 23);
  width: 100%;
  justify-content: center;
  display: flex;
  flex-direction: column;
  padding: 6rem;
  margin-bottom: 6rem;
  text-align: center;
}

.main h1 {
  font-size: 3rem;
  font-weight: bold;
}

/* Black warrior cleaning pros */
.headerContainer h1 {
  color: white;
  font-weight: bolder;
  font-size: 4rem;
}

/* phone number ; email */
.headerContainer h2 {
  color:rgb(255, 255, 255);
}

/* contact us */
.headerContainer h3 {
  color:rgb(255, 255, 255);
  font-weight: bold;
}

/* main subtitle */
.headerContainer h4 {
  padding-bottom: 4rem;
  color:rgb(197, 197, 197);
}

.divider {
  width: 10%;
  height: 4px;
  margin: 0rem;
  background-color: rgb(135, 23, 23);
}

.divider2 {
  width: 15%;
  margin-bottom: .5rem;
  height: 3px;
  background-color: rgb(145, 145, 145);
}

.divider3 {
  width: 90%;
  margin-bottom: .5rem;
  height: 4px;
  background-color: rgb(136, 136, 136);
}

.divider4 {
  width: 100%;
  margin-top: 0;
  margin-bottom: .25rem;
  height: 4px;
  background-color: rgb(135, 23, 23);
}

.divider5 {
  width: 50%;
  height: 4px;
  margin: .5rem;
  background-color: rgb(135, 23, 23);
}

.divider6 {
  width: 30%;
  height: 4px;
  margin: 0rem;
  background-color: rgb(135, 23, 23);
}


.main {
  min-height: 100vh;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;

}

.footer {
  justify-content: space-around;
  display: flex;
  align-items: center;
  font-weight: bold;
  font-size: large;
  background-color: rgb(51, 51, 51);
  color: white;
}

.footer a {
  justify-content: flex-end;
  flex-direction: row;
  align-items: center;
  padding: 0rem 1rem;
}

.footer h4 {
  font-weight: bold;
}

.footer p {
  color:rgb(225, 225, 225);
  margin: 0;
}

.footerInfo{
  padding: 1rem 0rem;
  line-height: 2rem;
  text-align: center;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
}

.headerContainerSoftwash {
  align-items: center;
  justify-content: center;
  width: 100%;
  display: flex;
  flex-direction: row;
  padding: 2rem;
}

.softwash h1 {
  display: flex;
  justify-content: center;
  font-size: 4rem;
  font-weight: bold;
  padding: 2rem;
  color: white;
  background-color: rgb(135, 23, 23);
}

.softwash h4 {
  font-weight: bold;
  display: flex;
  justify-content: center;
}

.softwash h3 {
   display: flex;
  justify-content: center;
}

.about{
  background-color:rgb(214, 214, 214);
  padding: 6rem 0rem;
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: column;
}

.about h3, .gallery h3, .gallery2 h3 {
  font-weight: bold;
  font-size: 2rem;
}

.about p {
  text-align: center;
  width: 75%;
  font-size: xx-large;

}

.cardContent {
  align-items: flex-end;
  display: flex;
  justify-content: center;
}

.button {
  background-color: grey;
  border: none;
  padding: .5rem 4rem;
  font-weight: bold;
}

.softwash p {
  padding: 0 4rem;
  text-align: center;
}

.card {
  padding: 2rem;
  text-align: center;
  justify-content: center;
  justify-items: center;   
  color: inherit;
  transition: transform .2s;
  background-color: transparent;
}

.card:hover{
  transform: scale(1.05);
  cursor: pointer;
}

.card:hover button {
  background-color: rgb(135, 23, 23);
}

.cardDetails {
  margin: auto;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
}

.card h2 {
  color: rgb(0, 0, 0);
  font-weight: bold;
 }

.card h3 {
  padding-top: 1rem;
}

.image {
  border-radius: 15px;
}

.imageShadow {
  border-radius: 15px;
  box-shadow: 2px 5px 10px #161616;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

.gallery {
  width: 90%;
  padding: 8rem 0rem;
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: column;
}
.gallery2 {
  width: 90%;
  padding: 0rem 0rem;
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: column;
}

.galleryCol{
  justify-content: center;
  flex-direction: column;
  display: flex;
  align-items: center;
  padding-top: 4rem;
}
 

.galleryImage {
  background-size: cover;
  display: block;
  border-radius: 10px;
  /* width: 400px; */
 }

 .galleryImageWrapper {
  position: relative;
  min-height: 250px;
  max-height: 450px;
  max-width: 450px;
 }

 .galleryImageShadow {
  box-shadow: 2px 5px 5px #828282;
  display: flex;
  z-index: 1;
  overflow: hidden;
  border-radius: 10px;
 }
 
.softwashHeader {
  width: 100%;
  background-color: rgb(135, 23, 23);
  padding: 2rem;
  color: white;
  align-items: center;
  display: flex;
  flex-direction: column;
}

.softWashServices {
  padding: 6rem 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-size: large;

 }

.softWashServices h2 {
  font-weight: bold;
  font-size: xx-large;
}

.serviceBox {
  background-color: rgb(185, 185, 185);
  color: black;
  font-size: larger;
  border-radius: 15px;
  padding: 4rem;
  margin: 1rem;
  justify-content: start;  
  align-items: center;
  flex-direction: column;
  display: flex;
 }

.serviceBox h4 {
  font-size: larger;
}

.serviceBox p {
  padding: .5rem;
 }

.swRow {
  display: flex;
  justify-content: center;

}

.softWashContact {
  align-items: center;
  width: 100%;
  justify-content: center;
  display: flex;
  flex-direction: column;
  padding: 6rem;
  margin-bottom: 0rem;
}

.softWashContact h2 {
  font-weight: bold;
  padding: .2rem;
}

.interiorGallery {
  width: 90%;
  padding: 4rem 2rem;
  justify-content: center;
  align-items: center;
  display: flex;
  flex-direction: column;
}

.carHeader {
  padding: 1rem;
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-evenly;
  flex-wrap: nowrap;
  flex-shrink: unset;
}

.carServices {
  padding: 2rem 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-size: large;

 }

 .carServices h2 {
  font-weight: bold;
 }

